test are working fine now